add :reload-all keyword
The :reload-all keyword allows loading the file after editing it, without restarting the REPL. See here: https://clojuredocs.org/clojure.core/require

--- a/docs/TESTS.org
+++ b/docs/TESTS.org
@@ -20,7 +20,7 @@ hold your solution (such as =bob.clj=) you can run the tests using
 First, =require= the test namespace:
 
 #+BEGIN_SRC clojure
-    => (require 'bob-test)
+    => (require 'bob-test :reload-all)
     nil
 #+END_SRC
 
